# terax-ai

./: TERAX.md
.github/workflows/: build-alpine.yml  build-tui.yml  build.yml
crates/terax-core/: Cargo.toml
crates/terax-core/src/: lib.rs
crates/terax-core/src/ai/: mod.rs
crates/terax-core/src/config/: mod.rs
crates/terax-core/src/fs/: mod.rs
crates/terax-core/src/git/: mod.rs
crates/terax-core/src/pty/: mod.rs
crates/terax-core/src/tools/: mod.rs
docs/terax-tui/: README.md  RELEASE_NOTES.md  SECURITY.md
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/fs/: file.rs
src-tauri/src/modules/pty/: shell_init.rs
src/app/: App.tsx
src/modules/ai/: config.ts
src/modules/source-control/: SourceControlPanel.tsx
src/modules/tabs/: TabBar.tsx
src/modules/terminal/lib/: rendererPool.ts
src/styles/: globals.css
terax-tui/: Cargo.toml
terax-tui/src/: main.rs
