[package]
name = "terax-tui"
version = "1.1.0"
edition = "2021"
description = "Terminal UI edition of Terax for musl/Alpine environments"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
walkdir = "2"
ignore = "0.4"
terax-core = { path = "../crates/terax-core" }

serde_json = "1"
